PINZ-107: developing and testing trip service
